TFP-6445 skille ut forvaltning-api begrens swagger